// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches snapshot by default 1`] = `
<DocumentFragment>
  <ul
<<<<<<< HEAD
    class="pf-v6-c-tree-view__list"
=======
    class="pf-v5-c-tree-view__list"
>>>>>>> main
    role="tree"
  >
    Content
  </ul>
</DocumentFragment>
`;

exports[`Matches snapshot when toolbar is passed 1`] = `
<DocumentFragment>
  <div>
    Toolbar content
  </div>
  <hr
<<<<<<< HEAD
    class="pf-v6-c-divider"
  />
  <ul
    class="pf-v6-c-tree-view__list"
=======
    class="pf-v5-c-divider"
  />
  <ul
    class="pf-v5-c-tree-view__list"
>>>>>>> main
    role="tree"
  >
    Content
  </ul>
</DocumentFragment>
`;
